Added table structure, caption, and column headers

--- a/index.html
+++ b/index.html
@@ -13,6 +13,38 @@ Description: Planet data structured into an accessible HTML table.
 -->
   </head>
   <body>
-    <h1>Planet data table</h1>
-  </body>
+  <h1>Planet data table</h1>
+  <table>
+    <caption>
+      Data about the planets of our solar system (Planetary facts taken from
+      <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
+    </caption>
+
+    <colgroup>
+      <col span="2" />
+      <col class="column-border" />
+      <col span="8" />
+    </colgroup>
+
+    <thead>
+      <tr>
+        <th scope="col" colspan="2"></th>
+        <th scope="col">Name</th>
+        <th scope="col">Mass (10<sup>24</sup>kg)</th>
+        <th scope="col">Diameter (km)</th>
+        <th scope="col">Density (kg/m<sup>3</sup>)</th>
+        <th scope="col">Gravity (m/s<sup>2</sup>)</th>
+        <th scope="col">Length of day (hours)</th>
+        <th scope="col">Distance from Sun (10<sup>6</sup>km)</th>
+        <th scope="col">Mean temperature (°C)</th>
+        <th scope="col">Number of moons</th>
+        <th scope="col">Notes</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <!-- rows go here next commit -->
+    </tbody>
+  </table>
+</body>
 </html>
